syntax = "proto3";
package test;
option java_package = "net.protoqueue.sample.proto";
option java_outer_classname = "TestProtos";

message DslProto {
    PacketType uri = 1;
    PHeader header = 2;
    PUserRequest user_request = 3;
    PUserResponse user_response = 4;
    PLevelRequest level_request = 5;
    PLevelResponse level_response = 6;
    PGlobalBroadcast broadcast = 7;
}

enum PacketType {
    kUserRequestUri = 0;
    kUserResponseUri = 1;
    kLevelRequestUri = 2;
    kLevelResponseUri = 3;
    kGlobalBroadcast = 4;
}

message PHeader {
    uint64 uid = 1;
    uint64 seqid = 2;
    Result result = 4;
}

message Result {
    ResultType code = 1;
    string res_msg = 2;
}

enum ResultType {
    kResultTypeOk = 0;
    kResultTypeError = 1;
}

message PUserRequest {
    uint64 uid = 1;
}

message PUserResponse {
    uint64 uid = 1;
    string name = 2;
}

message PGlobalBroadcast {
    string payload = 1;
}

message PLevelRequest {
    uint64 uid = 1;
}

message PLevelResponse {
    uint64 uid = 1;
    uint32 level = 2;
}